# main-system-public

./: .editorconfig  .envrc-nix  .gitignore  Makefile  README.md  docker-compose.yaml  flake.nix  package-lock.json  public-contributors.toml  shell.nix
.github/workflows/: acceptance-test.yaml  administration-panel.yaml  formatting.yaml  gray-whale.yaml  melon-head.yaml  members-panel.yaml  orca.yaml  publish.yaml
acceptance-test/: default.nix  setup.py
acceptance-test/acceptance_test/: __init__.py  registration.py
administration-panel/: README.md  config.example.json  default.nix  package-lock.json  package.json  shell.nix  tsconfig.json  webpack.config.js
administration-panel/src/: ApiAdapter.ts  App.tsx  Layout.tsx  config.ts  index.ts  keycloak.ts
administration-panel/src/layout/: AppHeader.tsx
administration-panel/src/pages/: DetailMemberPage.tsx  MembersTable.tsx  NewMember.tsx  NotFound.tsx  Welcome.tsx
administration-panel/src/styles/: index.css
administration-panel/src/templates/: index.html
docker/keycloak/: realm.json
docker/postgres/: Dockerfile
gray-whale/: .envrc-nix  .gitignore  README.md  default.nix  flake.nix  refinery.example.toml
gray-whale/migrations/: V10__allow_orca_to_access_memebers.sql  V11__updated_at_and_cleanups.sql  V12__allow_orca_delete_applications.sql  V13__remove_postgrest_roles.sql  V14__add_members_views.sql  V15__track_onboarding.sql  V16__add_invalid_state_to_applications.sql  V17__add_notes.sql  V18__remove_chairperson.sql  V19__member_workplace_junction.sql  V1__create_members.sql  V1__setup_orca.sql  V20__permissions_for_member_workplace.sql  V21__add_keycloak_id.sql  V22__alter_column_keycloak_id.sql  V23__onboarding_based_on_finished_at.sql  V24__create_email_subscriptions.sql  V2__configure_orca_role.sql  V2__create_registration_requests.sql  V3__add_files.sql  V3__make_registration_token_unique.sql  V4__grant_update_to_orca.sql  V4__members_table.sql  V5__add_files.sql  V5__add_postgrest_roles.sql  V6__generalize_files_table.sql  V7__add_registration_tasks_table.sql  V8__add_registration_views.sql  V9__tighten_registration_requests.sql
melon-head/: .gitignore  README.md  bsconfig.json  config.example.json  default.nix  package-lock.json  package.json  test.nix  tsconfig.json  webpack.config.js
melon-head/raw/: welcome_email_cs.mjml  welcome_email_en.mjml  welcome_workplace_email_cs.mjml  welcome_workplace_email_en.mjml
melon-head/src/: Api.res  App.res  AppHeader.res  AppNavigation.res  Applications.res  Chip.res  Dashboard.res  Data.res  DataTable.res  ErrorPage.res  Icons.res  Keycloak.res  Link.res  Oidc.ts  Page.res  PageNotFound.res  Profile.res  RemoteData.res  Session.res  SessionContext.res  Tabbed.res  index.html  index.js  index.ts  variables.scss
melon-head/src/App/: Api.res  AppHeader.res  AppNavigation.res  ApplicationDetail.res  Applications.res  Config.res  Dashboard.res  ErrorPage.res  Link.res  MemberDetail.res  MemberSummaryTable.res  MemberWelcome.res  MemberWelcomeEmail.res  MemberWorkplaceWelcome.res  Members.res  NewNote.res  Page.res  Profile.res  SessionContext.res  Settings.res  WorkplaceMembers.res  Workplaces.res  styles.module.scss
melon-head/src/Data/: Data.res  (+5 more)
members-panel/: .gitignore  README.md  config.example.json  default.nix  package-lock.json  package.json  test.nix  tsconfig.json  webpack.config.js
members-panel/src/: App.tsx  config.ts  index.ts  keycloak.ts
orca/: .envrc-nix  .gitignore  Cargo.toml  README.md  Rocket.example.toml  default.nix  flake.nix  rust-toolchain  rust-toolchain.toml  ~shell.nix
orca/.cargo/: audit.toml
orca/email_templates/: member_email_cs.mjml  member_email_en.mjml
orca/latex/: README.md  data.tex  default.nix  lang.cs.tex  lang.en.tex  registration.tex
orca/rest-client/: http-client.env.json  registration  registration.http
orca/src/: config.rs  lib.rs  main.rs  validation.rs
orca/src/api/: errors.rs  mod.rs
orca/src/api/applications/: mod.rs  query.rs
orca/src/api/files/: mod.rs
orca/src/api/members/: mod.rs  query.rs
orca/src/api/oidc/: mod.rs
orca/src/api/registration/: mod.rs  query.rs
orca/src/api/session/: mod.rs
orca/src/api/stats/: mod.rs  query.rs
orca/src/api/workplaces/: mod.rs  query.rs
orca/src/config/: templates.rs
orca/src/data/: mod.rs
orca/src/db/: mod.rs
orca/src/generate/: mod.rs
orca/src/listmonk/: mod.rs  query.rs
orca/src/logging/: mod.rs
orca/src/media/: mod.rs
orca/src/processing/: mandrill.rs  mod.rs  query.rs
orca/src/server/: cors.rs  jwk.rs  keycloak.rs  mod.rs  oid.rs
orca/src/server/oid/: keycloak.rs
orca/templates/: new_application_notice.html
orca/templates/email_verification/: cs.html  default.html
orca/templates/emails/: new_application_notice.mjml
orca/templates/emails/email_verification/: cs.mjml  default.mjml
orca/templates/emails/treasurer_notification/: default.mjml
scripts/: README.md  create-dev-user.sh  get-token.py  get-token.sh  seed-db-data.py  seed-db-data.sh
tex/: form.tex
(+54 files in other folders)
