[package]
name = "orca"
version = "0.1.0"
edition = "2024"
description = "API server for union member management"
categories = [ "web-programming", "api-bindings", "database" ]
keywords = [ "api", "user-management", "roles" ]
license-file = "../LICENSE"
repository = "https://github.com/ictunion/main-system-public/"

[features]
proxy-support = []

[dependencies]
rand = "0.10.1"
rocket = { version = "0.5.1", features = [ "json" ] }
serde = { version = "1.0.147", features = ["derive"] }
validator = { version = "0.19.0", features = [ "derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "ipnetwork", "time" ] }
tokio = { version = "1.25.0", features = [ "io-std", "fs", "process" ] }
image = "0.24.5"
cfg-if = "1.0.0"
log = "0.4.17"
fern = "0.6.1"
chrono = { version = "0.4.24", features = [ "serde" ] }
uuid = { version = "1.3.0", features = [ "v4", "serde" ] }
phf = { version = "0.11.1", features = [ "macros" ] }
lettre = { version = "0.11.11", features = [ "tokio1", "tokio1-native-tls" ] }
handlebars = "4.3.7"
reqwest = { version =  "0.13.2", features = [ "json" ] }
jsonwebtoken = { version = "10.3.0", features = [ "rust_crypto" ] }
mrml = "3.1.0"
thiserror = "2.0.9"
base64 = "0.22.1"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# Disabled lints
redundant_feature_names = "allow" # triggered by -support suffix of proxy-supports
multiple_crate_versions = "allow" # hard to maintain
literal_string_with_formatting_args = "allow" # can be genuinely useful
